testsuite/tests/parse-errors/let_mutable_in_module.ml
(* TEST
   flags = "-extension let_mutable";
   toplevel; *)

(* let mutable not allowed at structure level *)
module M = struct
  let mutable x = 20
end
